--- a/CanalDoOvidio/Views/Shared/_Layout.cshtml
+++ b/CanalDoOvidio/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Locadora do Ovidio</title>
+    <title>@ViewBag.Title - Locadora do Ovidião</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -16,12 +16,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Locadora do Ovidio", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Locadora do Ovidião", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Entrar", "SignUp", "Home")</li>
+                    <li>
+                        <a id="login" href="javascript:void;">Entrar</a>
+
+                    </li>
                     <li>@Html.ActionLink("Cadastrar", "Cadastrar", "Usuario")</li>
                 </ul>
             </div>
@@ -31,12 +34,68 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year -Locadora do Ovidio</p>
+            <p>&copy; @DateTime.Now.Year -Locadora do Ovidião</p>
         </footer>
     </div>
+
+    <div id="loginModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Exemplo de login Modal + Partial View</h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    <button type="button" id="btnLogar" class="btn btn-primary">Logar</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script type="text/javascript">
+        $("#login").on("click", function (e) {
+
+            $.get("/usuario/login", function (data) {
+                $('.modal-body').html(data);
+                $('#Senha').addClass('form-control');
+                $('#loginModal').modal();
+                $('#btnLogar').bind("click", logar)
+            });
+            e.preventDefault();
+        });
+
+        function logar() {
+            $.ajax({
+                type: "POST",
+                url: "/Usuario/Login",
+                data: '{"email": "' + $("#Email").val() + '",' +
+                ' "senha": "' + $("#Senha").val() + '"' +
+                '}',
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    alert("Logado com sucesso via ajax");
+                },
+                failure: function (response) {
+                    alert(response.responseText);
+                },
+                error: function (response) {
+                    alert(response.responseText);
+                }
+            });
+        }
+    </script>
+
 </body>
 </html>
